src/generators/snapshots/moon_cram__generators__generator__tests__create__markdown__equal_output.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```mooncram
$ the command
the output
```

