src/generators/snapshots/moon_cram__generators__generator__tests__create__markdown__multiline_command.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```mooncram
$ echo \
> something
the output
```

