src/generators/snapshots/moon_cram__generators__generator__tests__create__markdown__multiline_output.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```mooncram
$ the command
line 1
line 2
line 3 (no-eol)
```

