src/generators/snapshots/moon_cram__generators__generator__tests__create__markdown__non-zero_exit_code.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```mooncram
$ the command
the output
[123]
```

